examples/1.2.0/fail/entity-author-with-affiliation/CITATION.cff
authors:
- name: The Team
  affiliation: The University
cff-version: 1.2.0
message: The message
title: The title
